crates/python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_0.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/list/missing_closing_bracket_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..43,
        body: [
            Expr(
                ExprStmt {
                    range: 42..43,
                    value: List(
                        ListExpr {
                            range: 42..43,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 43..43,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Missing closing bracket 0: No elements
2 | 
3 | [
  |   Syntax Error: unexpected EOF while parsing
  |
