crates/python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_2.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/list/missing_closing_bracket_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..141,
        body: [
            Expr(
                ExprStmt {
                    range: 131..141,
                    value: List(
                        ListExpr {
                            range: 131..141,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 132..133,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    BinOpExpr {
                                        range: 136..141,
                                        left: Name(
                                            NameExpr {
                                                range: 136..137,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 140..141,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | [1,
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
